--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,9 +1,10 @@
 ---
-
+import { Image } from "astro:assets";
+import logo from "../assets/logo-black.svg";
 ---
 
 <header class="flex justify-between px-4 lg:px-8 border-b">
-  <a href="/"><img src="src/assets/logo-black.svg" alt="logo" width="80" /></a>
+  <a href="/"><Image src={logo} alt="logo" width="80" height="80" /></a>
   <nav class="my-auto">
     <ul class="flex gap-4 lg:text-2xl text-xl font-sans">
       <li><a href="/">Home</a></li>
