attempt to load images after deploymnet again

--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -1,10 +1,10 @@
 ---
 import { Image } from "astro:assets";
-import deckImage from "../assets/deck-work-1.jpeg";
-import basementFloor from "../assets/basement-floor-1.jpeg";
-import bathroomRenovation from "../assets/bathroom-renovation-1.jpeg";
-import kitchenRenovation from "../assets/kitchen-remodel-1.jpeg";
-import patioPainting from "../assets/patio-paint.jpeg";
+import deckImage from "/public/assets/deck-work-1.jpeg";
+import basementFloor from "/public/assets/basement-floor-1.jpeg";
+import bathroomRenovation from "/public/assets/bathroom-renovation-1.jpeg";
+import kitchenRenovation from "/public/assets/kitchen-remodel-1.jpeg";
+import patioPainting from "./public/assets/patio-paint.jpeg";
 ---
 
 <section>
