--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import logo from "../assets/logo-black.svg";
+import logo from "/public/assets/logo-black.svg";
 ---
 
 <header class="flex justify-between px-4 lg:px-8 border-b">
