--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -4,7 +4,7 @@ import deckImage from "/public/assets/deck-work-1.jpeg";
 import basementFloor from "/public/assets/basement-floor-1.jpeg";
 import bathroomRenovation from "/public/assets/bathroom-renovation-1.jpeg";
 import kitchenRenovation from "/public/assets/kitchen-remodel-1.jpeg";
-import patioPainting from "./public/assets/patio-paint.jpeg";
+import patioPainting from "/public/assets/patio-paint.jpeg";
 ---
 
 <section>
