--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -7,7 +7,7 @@ import kitchenRenovation from "/public/assets/kitchen-remodel-1.jpeg";
 import patioPainting from "/public/assets/patio-paint.jpeg";
 ---
 
-<section>
+<section class="border-2" id="services">
   <div class="p-8 lg:w-3/4 mx-auto flex flex-col gap-6">
     <div>
       <h2 class="text-4xl font-['Young_Serif'] text-center">Our Services!</h2>
@@ -26,7 +26,7 @@ import patioPainting from "/public/assets/patio-paint.jpeg";
         </div>
         <Image
           src={deckImage}
-          alt=""
+          alt="Deck cleaned, prepped, power washed, and stained"
           width="300"
           height="300"
           class="rounded-xl"
@@ -44,7 +44,7 @@ import patioPainting from "/public/assets/patio-paint.jpeg";
         </div>
         <Image
           src={basementFloor}
-          alt=""
+          alt="Changed the basement wooden floors"
           width="300"
           height="300"
           class="rounded-xl"
@@ -62,7 +62,7 @@ import patioPainting from "/public/assets/patio-paint.jpeg";
         </div>
         <Image
           src={bathroomRenovation}
-          alt=""
+          alt="Renovated the bathroom completely"
           width="300"
           height="300"
           class="rounded-xl"
@@ -81,7 +81,7 @@ import patioPainting from "/public/assets/patio-paint.jpeg";
         </div>
         <Image
           src={kitchenRenovation}
-          alt=""
+          alt="Cabinets Repainted in kitchen"
           width="300"
           height="300"
           class="rounded-xl"
@@ -99,7 +99,7 @@ import patioPainting from "/public/assets/patio-paint.jpeg";
         </div>
         <Image
           src={patioPainting}
-          alt=""
+          alt="Patio Painted in gray"
           width="300"
           height="300"
           class="rounded-xl"
