--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<section class="mt-12 border-b pb-8 pb-12">
+<section id="about" class="border-b pb-8 pb-12">
   <div class="p-8 lg:w-3/4 mx-auto flex flex-col gap-6">
     <h2 class="text-4xl font-['Young_Serif'] text-center lg:text-left">
       Who we are!
@@ -21,7 +21,7 @@
         <div class="flex gap-4 font-['Young_Serif'] hidden lg:block">
           <a
             href=""
-            class="py-3 px-4 rounded-xl bg-black/80 text-white text-lg"
+            class="py-3 px-4 rounded-xl bg-black/80 text-white text-lg hover:bg-neutral-600 active:bg-neutral-200 active:text-neutral-600"
           >
             Get your Free Estimate today!
           </a>
@@ -35,7 +35,10 @@
         class="rounded-xl mx-auto my-auto"
       />
       <div class="flex gap-4 font-['Young_Serif'] lg:hidden mx-auto md:mt-2">
-        <a href="" class="py-3 px-4 rounded-xl bg-black/80 text-white text-lg">
+        <a
+          href=""
+          class="py-3 px-4 rounded-xl bg-black/80 text-white text-lg hover:bg-neutral-600 active:bg-neutral-200 active:text-neutral-600"
+        >
           Get your free Estimate today!
         </a>
       </div>
