--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,7 +1,57 @@
 ---
-
+import { Image } from "astro:assets";
+import logo from "../../public/assets/logo-black.svg";
 ---
 
-<section>
-  <form action=""></form>
+<section id="contact">
+  <div
+    class="text-center my-24 py-10 border-2 border-neutral-300/50 p-10 w-4/5 md:w-4/5 xl:w-3/5 mx-auto rounded-md flex md:flex-row flex-col justify-center md:justify-around"
+  >
+    <div class="md:w-1/2 text-center md:text-left px-2">
+      <h2 class="text-4xl font-bold mb-4">Get in touch.</h2>
+      <p class="mb-4">
+        With over 20 years of experience, we strive to do the best work!
+      </p>
+      <p>Reach out so we can get you a free estimate today!</p>
+      <Image src={logo} alt="logo" width={200} height={200} class="mx-auto" />
+    </div>
+    <div class="md:w-1/2">
+      <form action="" class="flex flex-col gap-8">
+        <label class="w-full" for=""
+          ><input
+            required
+            type="text"
+            placeholder="Name"
+            class="w-full rounded-sm p-2 bg-neutral-200"
+          /></label
+        >
+        <label class="w-full" for=""
+          ><input
+            placeholder="email"
+            type="email"
+            required
+            class="w-full rounded-sm p-2 bg-neutral-200"
+          /></label
+        >
+        <label class="w-full" for=""
+          ><input
+            type="tel"
+            placeholder="phone number"
+            class="w-full rounded-sm p-2 bg-neutral-200"
+          /></label
+        >
+        <label for="w-full"
+          ><textarea
+            placeholder="your message"
+            required
+            class="w-full rounded-sm p-2 bg-neutral-200"></textarea></label
+        >
+        <input
+          type="submit"
+          value="Send Message"
+          class="bg-blue-600 p-2 w-36 rounded-md text-white text-lg hover:cursor-pointer hover:bg-blue-400 active:bg-green-300 active:text-neutral-700"
+        />
+      </form>
+    </div>
+  </div>
 </section>
