--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,18 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Navbar from "../components/Navbar.astro";
-import Hero from "../components/Hero";
+// import Hero from "../components/Hero";
 import About from "../components/About.astro";
 import Services from "../components/Services.astro";
 import Contact from "../components/Contact.astro";
+import Hero from "../components/Hero.jsx";
+import HeroButtons from "../components/HeroButtons.astro";
 ---
 
 <Layout title="FF Handyman Services" />
 <Navbar />
 <Hero client:load />
+<HeroButtons />
 <main>
   <About />
   <Services />
