finished for now

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -3,9 +3,9 @@ import { Image } from "astro:assets";
 import logo from "../../public/assets/logo-black.svg";
 ---
 
-<section id="contact">
+<section id="contact" class="border-b">
   <div
-    class="text-center my-24 py-10 border-2 border-neutral-300/50 p-10 w-4/5 md:w-4/5 xl:w-3/5 mx-auto rounded-md flex md:flex-row flex-col justify-center md:justify-around"
+    class="text-center mt-36 mb-32 md:mb-48 py-10 border-2 border-neutral-300/50 p-10 w-4/5 md:w-4/5 xl:w-3/5 mx-auto rounded-md flex md:flex-row flex-col justify-center md:justify-around"
   >
     <div class="md:w-1/2 text-center md:text-left px-2">
       <h2 class="text-4xl font-bold mb-4">Get in touch.</h2>
