--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,4 +2,20 @@
 
 ---
 
-<Footer />
+<footer class="p-4">
+  <nav>
+    <ul class="flex gap-6 justify-center text-lg">
+      <li><a href="#" class="hover:underline">Home</a></li>
+      <li><a href="#about" class="hover:underline">About</a></li>
+      <li><a href="#services" class="hover:underline">Services</a></li>
+      <li><a href="#contact" class="hover:underline">Contact</a></li>
+    </ul>
+    <div class="text-center mt-4 px-4 text-neutral-600">
+      created by <a
+        href="https://stevenalp.com"
+        target="_blank"
+        class="hover:underline">Steven</a
+      > with TailwindCSS, Astro, and React
+    </div>
+  </nav>
+</footer>
