--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -7,7 +7,7 @@ import kitchenRenovation from "/public/assets/kitchen-remodel-1.jpeg";
 import patioPainting from "/public/assets/patio-paint.jpeg";
 ---
 
-<section class="border-2" id="services">
+<section class="" id="services">
   <div class="p-8 lg:w-3/4 mx-auto flex flex-col gap-6">
     <div>
       <h2 class="text-4xl font-['Young_Serif'] text-center">Our Services!</h2>
