--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Navbar from "../components/Navbar.astro";
-// import Hero from "../components/Hero";
 import About from "../components/About.astro";
 import Services from "../components/Services.astro";
 import Contact from "../components/Contact.astro";
 import Hero from "../components/Hero.jsx";
 import HeroButtons from "../components/HeroButtons.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <Layout title="FF Handyman Services" />
@@ -18,3 +18,4 @@ import HeroButtons from "../components/HeroButtons.astro";
   <Services />
   <Contact />
 </main>
+<Footer />
