--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -27,7 +27,7 @@ import logo from "../../public/assets/logo-black.svg";
         >
         <label class="w-full" for=""
           ><input
-            placeholder="email"
+            placeholder="Email"
             type="email"
             required
             class="w-full rounded-sm p-2 bg-neutral-200"
@@ -36,13 +36,13 @@ import logo from "../../public/assets/logo-black.svg";
         <label class="w-full" for=""
           ><input
             type="tel"
-            placeholder="phone number"
+            placeholder="Phone"
             class="w-full rounded-sm p-2 bg-neutral-200"
           /></label
         >
         <label for="w-full"
           ><textarea
-            placeholder="your message"
+            placeholder="Message"
             required
             class="w-full rounded-sm p-2 bg-neutral-200"></textarea></label
         >
