--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,7 +4,9 @@ import logo from "/public/assets/logo-black.svg";
 ---
 
 <script>
-  document.getElementById("navbar").addEventListener("click", () => {});
+  document.getElementById("navbar").addEventListener("click", () => {
+    document.getElementById("navbar-dropdown").classList.toggle("hidden");
+  });
 </script>
 
 <header
@@ -12,7 +14,7 @@ import logo from "/public/assets/logo-black.svg";
 >
   <a href="/"><Image src={logo} alt="logo" width="80" height="80" /></a>
   <nav class="my-auto">
-    <ul class="flex gap-4 text-xl font-sans hidden md:flex">
+    <ul class="gap-4 text-xl font-sans hidden md:flex">
       <li>
         <a href="/#" class="hover:text-neutral-500 active:text-neutral-200"
           >Home</a
@@ -39,7 +41,7 @@ import logo from "/public/assets/logo-black.svg";
     <!-- Dropdown below -->
     <ul
       id="navbar-dropdown"
-      class="absolute top-20 border w-full left-0 bg-white flex flex-col text-xl font-sans text-center"
+      class="absolute top-20 border w-full left-0 bg-white flex-col text-xl font-sans text-center hidden md:hidden"
     >
       <li class="w-fullborder-2">
         <a
