--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -20,7 +20,7 @@
         </p>
         <div class="flex gap-4 font-['Young_Serif'] hidden lg:block">
           <a
-            href=""
+            href="#contact"
             class="py-3 px-4 rounded-xl bg-black/80 text-white text-lg hover:bg-neutral-600 active:bg-neutral-200 active:text-neutral-600"
           >
             Get your Free Estimate today!
@@ -30,13 +30,13 @@
 
       <img
         src="/assets/kitchen-remodel-2.jpeg"
-        alt=""
+        alt="kitchen remodeling image"
         width="500"
         class="rounded-xl mx-auto my-auto"
       />
       <div class="flex gap-4 font-['Young_Serif'] lg:hidden mx-auto md:mt-2">
         <a
-          href=""
+          href="#contact"
           class="py-3 px-4 rounded-xl bg-black/80 text-white text-lg hover:bg-neutral-600 active:bg-neutral-200 active:text-neutral-600"
         >
           Get your free Estimate today!
