fixed navbar issue

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -41,7 +41,7 @@ import logo from "/public/assets/logo-black.svg";
     <!-- Dropdown below -->
     <ul
       id="navbar-dropdown"
-      class="absolute top-20 border w-full left-0 bg-white flex flex-col text-xl font-sans text-center"
+      class="hidden absolute top-20 border w-full left-0 bg-white flex-col text-xl font-sans text-center"
     >
       <li class="w-fullborder-2">
         <a
