added github repo to local

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -33,6 +33,12 @@ import logo from "/public/assets/logo-black.svg";
       </li>
       <li>
         <a
+          href="/gallery"
+          class="hover:text-neutral-500 active:text-neutral-200">Gallery</a
+        >
+      </li>
+      <li>
+        <a
           href="/#contact"
           class="hover:text-neutral-500 active:text-neutral-200">Contact</a
         >
@@ -62,6 +68,13 @@ import logo from "/public/assets/logo-black.svg";
           href="/#services"
           class="block hover:text-neutral-500 hover:bg-neutral-200 active:bg-neutral-400 active:text-white py-6"
           >Services</a
+        >
+      </li>
+      <li class="w-fullborder-2">
+        <a
+          href="/gallery"
+          class="block hover:text-neutral-500 hover:bg-neutral-200 active:bg-neutral-400 active:text-white py-6"
+          >Gallery</a
         >
       </li>
       <li class="w-fullborder-2">
