--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -84,6 +84,13 @@ import logo from "/public/assets/logo-black.svg";
           >Contact</a
         >
       </li>
+      <li class="w-fullborder-2">
+        <a
+          href="/#gallery"
+          class="block hover:text-neutral-500 hover:bg-neutral-200 active:bg-neutral-400 active:text-white py-6"
+          >Gallery</a
+        >
+      </li>
     </ul>
     <div
       id="navbar"
