removed border black 2

--- a/src/components/gallery/ImageInstance.astro
+++ b/src/components/gallery/ImageInstance.astro
@@ -11,5 +11,5 @@ const basePath = "/assets/";
 <img
   src={`${basePath}${fileName}`}
   alt={alt}
-  style="max-width: 350px; height: 400px; object-fit: cover; border: 2px solid black; border-radius: 50px;"
+  style="max-width: 350px; height: 400px; object-fit: cover; border-radius: 50px;"
 />
