--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -2,6 +2,8 @@
 import Layout from "../layouts/Layout.astro";
 import Navbar from "../components/Navbar.astro";
 import ImageSection from "../components/gallery/ImageSection.astro";
+import Contact from "../components/Contact.astro";
+import Footer from "../components/Footer.astro";
 
 const galleryData = [
   {
@@ -83,7 +85,7 @@ const galleryData = [
 
 <Layout title="Gallery">
   <Navbar />
-  <main class="border-2 py-20">
+  <main class="py-20">
     <div class="w-full text-3xl pl-24 py-10 font-semibold">
       <h1>Gallery</h1>
     </div>
@@ -98,4 +100,6 @@ const galleryData = [
       }
     </div>
   </main>
+  <Contact />
+  <Footer />
 </Layout>
