add gallery to center

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -17,7 +17,7 @@ import logo from "../../public/assets/logo-black.svg";
     </div>
     <div class="md:w-1/2">
       <form
-        action="https://formsubmit.co/stevenalp18@gmail.com"
+        action="https://formsubmit.co/fernandoflores196805@gmail.com"
         method="POST"
         class="flex flex-col gap-8"
       >
