--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -86,7 +86,7 @@ const galleryData = [
 <Layout title="Gallery">
   <Navbar />
   <main class="py-20">
-    <div class="w-full text-3xl pl-24 py-10 font-semibold">
+    <div class="w-full text-center text-3xl py-10 font-semibold">
       <h1>Gallery</h1>
     </div>
     <div class="w-full text-center">
